# Launchpad-McDuck

./: README.md  RedObjectDetection.py
our_ws/src/launchpad/: CMakeLists.txt  launchpad.launch  package.xml  ros_env.sh
our_ws/src/launchpad/scripts/: ObjectDetection.py  camera_client.py  camera_interface.py  camera_publisher.py  camera_subscriber.py  image_processing.py  motion_interface.py  motion_logic.py  motion_logic_output.csv  test_run_1.csv  test_run_2.csv
our_ws/src/launchpad/scripts/Adafruit_I2C/: Adafruit_I2C.py
our_ws/src/launchpad/scripts/calibration/: camera_publisher.py  camera_subscriber.py
our_ws/src/launchpad/scripts/old_stuff/: PID_Template.py  camera_capture.py  getValues.py
our_ws/src/launchpad/scripts/opencv calibration/: calibartion.py  coord.py  hsv_finder.py  undistort.py
our_ws/src/launchpad/scripts/simulation/: simulated_vision.m
our_ws/src/launchpad/srv/: command.srv  measurement.srv  motionLogic.srv  snapshot.srv
